Added breakpoint for disclaimer footer for narrower screens at 1320px

--- a/app/assets/stylesheets/main/pages.css.sass
+++ b/app/assets/stylesheets/main/pages.css.sass
@@ -24,6 +24,8 @@
       .disclaim-footer
         background-color: #000000
         height: 2.5em
+        +breakpoint(0 1320px)
+          height: 4.5em
         padding: 5px
         margin: 0 -6px -6px -5px
         color: #FFFFFF
