--- a/app/views/pages/landing.html.haml
+++ b/app/views/pages/landing.html.haml
@@ -1,14 +1,12 @@
 - title 'Welcome'
 
 =render 'shared/head'
-    
+   
 
 .helper.show-for-medium-up
 .main.row
   .large-8.small-centered.columns.row
     .disclaimer.show-for-medium-up.large-10
-      
-      
       %p Ahoy!!! Currently we arrr setting sail in the Rogue Valley in Southern Oregon. 
       %p Beginning in Ashland Oregon, we be adding new businesses as we grow. 
       %p We arrr plotting our course and swabbing the deck. If y'ad like t'e add a sustainable business, 
@@ -21,7 +19,7 @@
             %span IndieGoGo
         .large-5.columns
           = link_to 'https://www.facebook.com/RogueMaps', class: 'link' do
-            Also, Like our
+            Like our
             %span Facebook page 
       
   .large-8.small-centered.columns.row
