--- a/app/assets/stylesheets/main/pages.css.sass
+++ b/app/assets/stylesheets/main/pages.css.sass
@@ -14,8 +14,8 @@
       background-color: #FFFFFF
       padding: 5px
       text-align: center
-      margin-bottom: 20px
-      margin-left: 15px
+      margin-top: 90px
+      margin-left: 60px
       border: 2px black solid
       +border-radius(5px)
       p
@@ -24,8 +24,6 @@
       .disclaim-footer
         background-color: #000000
         height: 2.5em
-        +breakpoint(0 1320px)
-          height: 4.5em
         padding: 5px
         margin: 0 -6px -6px -5px
         color: #FFFFFF
@@ -37,7 +35,7 @@
           font-size: 1.5em
     
   .helper
-    height: 15%
+    height: 12%
     vertical-align: middle
     
   form.search
