--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -16,7 +16,7 @@
 
 // We use these to control various global styles
 //$body-bg: #d2cec1 image_url('map.jpg') no-repeat top center fixed;
-$body-bg: #d2cec1 image_url('lilatomato.jpg') no-repeat top center fixed;
+//$body-bg: #d2cec1 image_url('fruit.png') no-repeat top center fixed;
 // $body-font-color: #222;
 // $body-font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
 // $body-font-weight: normal;
@@ -970,7 +970,7 @@ $input-font-size: emCalc(24px);
 
 // Background color for the top bar
 // old topbar-bg color rgba(86, 119, 86, 0.35)
-$topbar-bg: rgba(243, 248, 252, .85);
+//$topbar-bg: rgba(243, 248, 252, .85);
 
 // Height and margin 135px
 $topbar-height: 100px;
