--- a/app/assets/stylesheets/main/main.css.sass
+++ b/app/assets/stylesheets/main/main.css.sass
@@ -9,6 +9,13 @@ input[type='text']
 html, body
   height: 100%
   
+body
+  background: url(../../assets/fruits1.jpg) no-repeat center center fixed
+  -webkit-background-size: cover
+  -moz-background-size: cover
+  -o-background-size: cover
+  background-size: cover
+
 .head
   height: 100px
   
