--- a/app/assets/stylesheets/main/main.css.sass
+++ b/app/assets/stylesheets/main/main.css.sass
@@ -10,7 +10,7 @@ html, body
   height: 100%
   
 body
-  background: url('/assets/fruits1.jpg') no-repeat center center fixed
+  background: image_url('fruits1.jpg') no-repeat center center fixed
   -webkit-background-size: cover
   -moz-background-size: cover
   -o-background-size: cover
