--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -30,6 +30,7 @@
 
 // We use these as default colors throughout
 // $primary-color: #2ba6cb;
+ $primary-color: #2d67b2;
 // $secondary-color: #e9e9e9;
 // $alert-color: #c60f13;
 // $success-color: #5da423;
@@ -133,6 +134,7 @@ $paragraph-margin-bottom: emCalc(5px);
 // $anchor-text-decoration: none;
 // $anchor-font-color: $primary-color;
 // $anchor-font-color-hover: darken($primary-color, 5%);
+$anchor-font-color-hover: lighten($primary-color, 10%);
 
 // We use these to style the <hr> element
 // $hr-border-width: 1px;
