Changed the name of the image for map marker, updated the id for the title links to reflect specific ids for each header to link mouseover events to change map markers

--- a/app/views/businesses/search.html.haml
+++ b/app/views/businesses/search.html.haml
@@ -18,7 +18,7 @@
 
           %hgroup.row
             .large-9.column
-              %h2{:id=> "b_link"}
+              %h2{:id=> business.name}
                 =link_to business.name, business_path(business), class: 'business-name'
             .large-3.column
               %h3= business.category
