added a script that should add a hover to the business listing class to change its background on mouse over

--- a/app/assets/stylesheets/main/businesses.css.sass
+++ b/app/assets/stylesheets/main/businesses.css.sass
@@ -82,6 +82,9 @@ body.businesses
         padding-left: 5px
         padding-right: 5px
     
+  .business_hover
+    background: black
+    
   .thumb
     width: 100%
     
