modified the gem file to roll back AWS to anything earlier that 2.0, added foundation classes to admin new business page

--- a/app/views/admin/businesses/new.html.haml
+++ b/app/views/admin/businesses/new.html.haml
@@ -1,5 +1,6 @@
 %h1 New business
+.row
+  .business.large-6.large-centered.columns
+    = render 'form'
 
-= render 'form'
-
-= link_to 'Back', admin_businesses_path
+    = link_to 'Back', admin_businesses_path
