Fixed the location search error (added ids to array via pluck), and removed below from landing page disclaimer section

--- a/app/views/pages/landing.html.haml
+++ b/app/views/pages/landing.html.haml
@@ -21,7 +21,7 @@
       %p Beginning in Ashland Oregon, we be adding new businesses as we grow. 
       %p We arrr plotting our course and swabbing the deck. If y'ad like t'e add a sustainable business, 
       %p hail the crew via the <a href="mailto:info@roguemaps.com?Subject=Hailing%20the%20crew"><span style="color: red">Contact</span></a> link above. 
-      %p Meanwhile explore what there is by clicking on ye ol' spyglass below. 
+      %p Meanwhile explore what there is by clicking on ye ol' spyglass. 
       .disclaim-footer
         .large-12.columns
           = link_to 'https://www.facebook.com/RogueMaps', class: 'link' do
