Working on loading data to the main-page. Figuring out why @Business remains nil/null

--- a/app/assets/stylesheets/main/pages.css.sass
+++ b/app/assets/stylesheets/main/pages.css.sass
@@ -6,9 +6,11 @@
 
   .top-section   
     form.search
-      display: none
-  .main-container
-    height: 100%
+      display: inline
+    & input.submit
+      height: 26px
+    .main-container
+      height: 100%
     
     .disclaimer
       background-color: #FFFFFF
@@ -37,18 +39,8 @@
   .helper
     height: 12%
     vertical-align: middle
-    
-  form.search
-    vertical-align: middle
-    .submit
-      cursor: pointer
-      height: 45px
-
 
 #pages-about
-
-  .wrapper
-    background: rgba(243, 248, 252, .85)
 
   .company
     position: relative
