--- a/app/views/shared/_head.html.haml
+++ b/app/views/shared/_head.html.haml
@@ -6,7 +6,7 @@
       %li{:id => "logo"}
         =link_to image_tag('logo.png'), root_path, class: 'logo'
       %li{:id => "logo_txt"}
-        Your Guide to Sustainable Treasures
+        Discover Your Sustainable Lifestyle
 
     %section.top-section
       .menu-icon
