--- a/app/views/pages/landing_old.html.haml
+++ b/app/views/pages/landing_old.html.haml
@@ -1,23 +1,20 @@
--content_for(:scripts){render '/layouts/gmap.js'}
 - title 'Welcome'
 
 =render 'shared/head'
    
-.results.row
-  .map.large-4.columns.show-for-medium-up
-    #map-canvas
-  - @businesses.each do |business|
-    %tr
-      %td= business.city.city_display
-      %td= link_to business.name, edit_admin_business_path(business)
-      %td= business.category
-      %td= business.formatted_address
-      %td= business.phone
-      %td= business.active? ? 'yes' : 'no'
-      %td= link_to 'Show', business
-      %td= link_to 'Destroy', [:admin, business], :method => :delete, :data => { :confirm => 'Are you sure?' }
 
-.main.row  
+.helper.show-for-medium-up
+.main.row
+  .large-8.small-centered.columns.row
+    =form_tag search_businesses_path, method: 'get', class: 'search' do
+      .large-5.columns
+        =text_field_tag :q, nil, placeholder:'What'
+      .large-5.columns
+        =text_field_tag :location, nil, placeholder:'Where'
+      
+      .large-2.columns
+        =image_submit_tag 'search_button.png', class: 'submit'
+            
   .large-8.small-centered.columns.row
     .disclaimer.show-for-medium-up.large-10
       %p Ahoy!!! Currently we arrr setting sail in the Rogue Valley in Southern Oregon. 
