Successfully loaded data to landing page and moved all search result specific styling to main.css.sass

--- a/app/assets/stylesheets/main/index.sass
+++ b/app/assets/stylesheets/main/index.sass
@@ -12,10 +12,11 @@
 @import "foundation/components/dropdown"
 
 $heading-font: 'Jim Nightshade'
+$business_bg_color: rgba(243, 248, 252, .85)
 
 @import main
 @import head
 
 @import pages
-@import businesses
+//@import businesses
 
