--- a/app/assets/stylesheets/main/pages.css.sass
+++ b/app/assets/stylesheets/main/pages.css.sass
@@ -11,30 +11,35 @@
       height: 26px
     .main-container
       height: 100%
-    
-    .disclaimer
-      background-color: #FFFFFF
+      .showbg
+        background: rgba(243, 248, 252, .95) image_url('business_bg.png')
+        background-size: 100%
+        width: 100%
+        height: 100%
+  
+  .disclaimer
+    background-color: #FFFFFF
+    padding: 5px
+    text-align: center
+    margin-top: 90px
+    margin-left: 60px
+    border: 2px black solid
+    +border-radius(5px)
+    p
+      font-family: $heading-font
+      font-size: 1.5em
+    .disclaim-footer
+      background-color: #000000
+      height: 2.5em
       padding: 5px
-      text-align: center
-      margin-top: 90px
-      margin-left: 60px
-      border: 2px black solid
-      +border-radius(5px)
-      p
+      margin: 0 -6px -6px -5px
+      color: #FFFFFF
+      span
+        color: red
+      a
+        color: #FFFFFF
         font-family: $heading-font
         font-size: 1.5em
-      .disclaim-footer
-        background-color: #000000
-        height: 2.5em
-        padding: 5px
-        margin: 0 -6px -6px -5px
-        color: #FFFFFF
-        span
-          color: red
-        a
-          color: #FFFFFF
-          font-family: $heading-font
-          font-size: 1.5em
     
   .helper
     height: 12%
