--- a/app/assets/stylesheets/main/main.css.sass
+++ b/app/assets/stylesheets/main/main.css.sass
@@ -53,3 +53,94 @@ body
   // style pagination here
   text-align: center
   margin-top: 20px
+
+//Business search showing display. Used on main page as well as search results page.   
+body.businesses, body.pages
+  
+  .showbg
+    background: rgba(243, 248, 252, .95) image_url('business_bg.png')
+    background-size: 100%
+    width: 100%
+    height: 100%
+  
+  .businesses
+    position: absolute
+    top: 0px
+    bottom: 0px
+    right: 0px
+    overflow-y: scroll
+    background: $business_bg_color 
+
+  .tag-filter-bg
+    background: rgba(145, 122, 122, .50)
+    height: 35px
+    width: 100%
+    overflow: hidden
+    position: absolute
+    top: 50px
+    +breakpoint(0 1100px)
+      overflow: visible
+      height: 0px
+
+  .tag-filter
+    position: relative
+    float: right
+    z-index: 11
+    width: 87%
+    +breakpoint(0px 1100px)
+      width: 200px
+    li
+      padding: 0 .5em
+      display: inline-block
+      float: right
+
+  
+    .filter-dropdown
+      float: right
+      +breakpoint(1100px)
+        display: none
+      &.button
+        background: none
+        border: none
+        color: black
+        padding: 10px 13px
+    +breakpoint(0px 1100px)
+      #filter-tags
+        +dropdown-container()
+        width: 400px
+        li
+          +dropdown-style()
+          display: block
+          float: none
+
+  .business
+    background: rgba(243, 248, 252, .65)
+    padding: 5px 0 5px 0
+    margin-bottom: 5px
+    min-height: 150px
+    h2
+      line-height: 1.2
+      margin: 0
+      font-family: $heading-font
+      padding-top: 3px
+    h3
+      line-height: 1.2
+      margin: 0
+      font-size: 1em
+
+    +breakpoint(0 640px)
+      & > .column
+        padding-left: 5px
+        padding-right: 5px
+  
+  .business_hover
+    background: black
+  
+  .thumb
+    width: 100%
+  
+  .webface, .details
+    margin-top: 25px
+  
+  .import_info
+    margin-top: 15px
