--- a/app/views/shared/_head.html.haml
+++ b/app/views/shared/_head.html.haml
@@ -6,7 +6,7 @@
       %li{:id => "logo"}
         =link_to image_tag('logo.png'), root_path, class: 'logo'
       %li{:id => "logo_txt"}
-        Your Guide to Sustainable Treasures
+        Your Guide to the Sustainable Marketplace
 
     %section.top-section
       .menu-icon
@@ -20,6 +20,6 @@
             =mail_to "info@roguemaps.com", "Contact"
           %li
             =link_to image_tag( 'facebook_32.png'), 'https://www.facebook.com/RogueMaps'
-          
+
     %section.top-section.search
-      =render 'shared/search'         
+      =render 'shared/search'
