removed about link

--- a/app/views/shared/_head.html.haml
+++ b/app/views/shared/_head.html.haml
@@ -14,8 +14,8 @@
           %span
       #main-menu{data: {dropdown: {content: true}}}
         %ul.right
-          %li
-            =link_to "About", "/pages/about"
+          -# %li
+          -#   =link_to "About", "/pages/about"
           %li
             =mail_to "info@roguemaps.com", "Contact"
           %li
