--- a/app/views/pages/landing.html.haml
+++ b/app/views/pages/landing.html.haml
@@ -4,6 +4,9 @@
 
 
 .helper.show-for-medium-up
+.large-8
+  .informationText
+    Enter ‘What’ you are looking for in the 'What Box’ and 'Where' you are looking in the ‘Where Box’. We are currently only servicing the Rogue Valley in Southern Oregon. Please email us any suggestions for businesses. Thank You!
 .main.row
   .large-8.small-centered.columns.row
     =form_tag search_businesses_path, method: 'get', class: 'search' do
