--- a/app/assets/stylesheets/main/pages.css.sass
+++ b/app/assets/stylesheets/main/pages.css.sass
@@ -50,7 +50,7 @@
     margin-left: auto
     margin-right: auto
     margin-bottom: 5%
-    @include text-shadow(rgba(red, 0.3) 2px 2px 1px)
+    +text-shadow(rgba(red, 0.3) 2px 2px 1px)
 
 #pages-about
 
