Removed all content for under construction

--- a/app/assets/stylesheets/main/businesses.css.sass
+++ b/app/assets/stylesheets/main/businesses.css.sass
@@ -1,7 +1,9 @@
 // Place all the styles related to the businesses controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-
+@import "foundation_and_overrides"
+@import "foundation/components/dropdown"
+@import "breakpoint"
 $business_bg_color: rgba(243, 248, 252, .85)
 
 body.businesses
