--- a/app/assets/stylesheets/main/main.css.sass
+++ b/app/assets/stylesheets/main/main.css.sass
@@ -1,5 +1,7 @@
 // // this is where you should put all the site-wide styling
-
+@import "foundation_and_overrides"
+@import "foundation/components/dropdown"
+@import "breakpoint"
 
 input[type='text']
   +border-radius(5px)
@@ -8,7 +10,7 @@ input[type='text']
 
 html, body
   height: 100%
-  
+
 body
   background: image_url('map1.jpg') no-repeat center center fixed
   -webkit-background-size: cover
@@ -18,7 +20,7 @@ body
 
 .head
   height: 100px
-  
+
 .submit
   outline: none
 
@@ -39,7 +41,7 @@ body
 #map-canvas
   width: 100%
   height: 100%
-  img 
+  img
     max-width: none
 
 .results
