--- a/app/views/shared/_search.html.haml
+++ b/app/views/shared/_search.html.haml
@@ -1,15 +1,15 @@
-=form_tag search_businesses_path, method: 'get', class: 'search' do
-  =hidden_field_tag :filter_tags
-
-  %ul.right
-    %li
-      =label_tag :location, 'Displaying:', class: 'inline right'
-    %li
-      =text_field_tag :q, @q, placeholder:'What'
-    %li
-      =label_tag :location, 'in', class: 'inline right'
-    %li
-      =text_field_tag :location, @location, placeholder:'Where'
-    
-    %li.submit
-      =image_submit_tag 'search_button.png', class: 'submit'
+-# =form_tag search_businesses_path, method: 'get', class: 'search' do
+-#   =hidden_field_tag :filter_tags
+-#
+-#   %ul.right
+-#     %li
+-#       =label_tag :location, 'Displaying:', class: 'inline right'
+-#     %li
+-#       =text_field_tag :q, @q, placeholder:'What'
+-#     %li
+-#       =label_tag :location, 'in', class: 'inline right'
+-#     %li
+-#       =text_field_tag :location, @location, placeholder:'Where'
+-#
+-#     %li.submit
+-#       =image_submit_tag 'search_button.png', class: 'submit'
