--- a/app/views/shared/_head.html.haml
+++ b/app/views/shared/_head.html.haml
@@ -1,25 +1,25 @@
-.head
-
-  %nav
-    %ul.title-area
-      %li.name
-      %li{:id => "logo"}
-        =link_to image_tag('logo.png'), root_path, class: 'logo'
-      %li{:id => "logo_txt"}
-        Your Guide to the Sustainable Marketplace
-
-    %section.top-section
-      .menu-icon
-        %a{data: {dropdown: 'main-menu'}}
-          %span
-      #main-menu{data: {dropdown: {content: true}}}
-        %ul.right
-          -# %li
-          -#   =link_to "About", "/pages/about"
-          %li
-            =mail_to "info@roguemaps.com", "Contact"
-          %li
-            =link_to image_tag( 'facebook_32.png'), 'https://www.facebook.com/RogueMaps'
-
-    %section.top-section.search
-      =render 'shared/search'
+-# .head
+-#
+-#   %nav
+-#     %ul.title-area
+-#       %li.name
+-#       %li{:id => "logo"}
+-#         =link_to image_tag('logo.png'), root_path, class: 'logo'
+-#       %li{:id => "logo_txt"}
+-#         Your Guide to the Sustainable Marketplace
+-#
+-#     %section.top-section
+-#       .menu-icon
+-#         %a{data: {dropdown: 'main-menu'}}
+-#           %span
+-#       #main-menu{data: {dropdown: {content: true}}}
+-#         %ul.right
+-#           -# %li
+-#           -#   =link_to "About", "/pages/about"
+-#           %li
+-#             =mail_to "info@roguemaps.com", "Contact"
+-#           %li
+-#             =link_to image_tag( 'facebook_32.png'), 'https://www.facebook.com/RogueMaps'
+-#
+-#     %section.top-section.search
+-#       =render 'shared/search'
