remved variable that tripped build

--- a/app/assets/stylesheets/main/head.css.sass
+++ b/app/assets/stylesheets/main/head.css.sass
@@ -14,7 +14,7 @@ nav
 
   a
     color: black
-    font-family: $heading-font
+    // font-family: $heading-font
     font-size: 26px
 
 .title-area
@@ -31,7 +31,7 @@ nav
         width: 80px
 
   li
-    font-family: $heading-font
+    // font-family: $heading-font
     padding-right: 10px
     font-size: 1.5em
     display: inline
