--- a/app/assets/stylesheets/main/index.sass
+++ b/app/assets/stylesheets/main/index.sass
@@ -14,7 +14,7 @@
 @import "foundation/components/dropdown"
 @import "breakpoint"
 
-$heading-font: 'Jim Nightshade'
+// $heading-font: 'Jim Nightshade'
 
 @import main
 @import head
