--- a/app/assets/stylesheets/main/businesses.css.sass
+++ b/app/assets/stylesheets/main/businesses.css.sass
@@ -72,7 +72,7 @@ body.businesses
     h2
       line-height: 1.2
       margin: 0
-      font-family: $heading-font
+      // font-family: $heading-font
       padding-top: 3px
     h3
       line-height: 1.2
