--- a/app/assets/stylesheets/main/pages.css.sass
+++ b/app/assets/stylesheets/main/pages.css.sass
@@ -22,7 +22,7 @@
       border: 2px black solid
       +border-radius(5px)
       p
-        font-family: $heading-font
+        // font-family: $heading-font
         font-size: 1.5em
       .disclaim-footer
         background-color: #000000
@@ -34,7 +34,7 @@
           color: red
         a
           color: #FFFFFF
-          font-family: $heading-font
+          // font-family: $heading-font
           font-size: 1.5em
 
   .helper
@@ -84,7 +84,7 @@
 
     h1, h2
       text-align: center
-      font-family: $heading-font
+      // font-family: $heading-font
     p
       text-align: left
       text-indent: 50px
